tests/NormalTests/paczka1/fuzzy1/33519303.err
Error in line 4: fWAa A534 75,91
Error in line 1: A383 A534 9,3
Error in line 9: 9HpMSlYEqud A534 52,7
Error in line 33: 9HpMSlYEqud A534 22,17
Error in line 28: A383 A534 63,4
